blue and purple circles added + transition efect for all 3 circles

--- a/index.html
+++ b/index.html
@@ -342,30 +342,53 @@
                 </article>
             </div>
             <div class="comunityStats">
-                <p>...whether you’re making your first commit or sending a Rover to Mars, there’s room for you here, too.</p>
-                <div class="stats">
-                    <a href="#">
-                        <div class="orange-circle">   
-                            <span class="block-white">96M<sup>*</sup></span>
-                            <span>repositories worldwide</span>
-                        </div>
-                        <div class="stats-text">
-                            <p>GitHub’s users create and maintain influential technologies alongside the world’s largest 
-                                <span class="text-orange-light">open source&nbsp;community</span>.
-                            </p>
-                            <svg class="octicon-triangle-right" viewBox="0 0 6 16" version="1.1" width="6" height="16"
-                                aria-hidden="true">
-                                <path fill-rule="evenodd" d="M0 14l6-6-6-6v12z"></path>
-                            </svg>
-                        </div>
-                    </a>
-                        <div>
-
-                        </div>
-                    <a href="#">
-                    </a>
-                    <a href="#">
-                    </a>
+                <div class="comunityStatsContainer">
+                    <div>
+                        <p>...whether you’re making your first commit or sending a Rover to Mars, there’s room for you here, too.</p>
+                    </div>
+                    <div class="stats">
+                        <a href="#">
+                            <div class="orange-circle">   
+                                <span class="block-white">96M<sup>*</sup></span>
+                                <span>repositories worldwide</span>
+                            </div>
+                            <div class="stats-text">
+                                <p>GitHub’s users create and maintain influential technologies alongside the world’s largest 
+                                    <span class="text-orange-light">open source&nbsp;community</span>.
+                                </p>
+                                <svg class="octicon-triangle-right-orange" viewBox="0 0 6 16" version="1.1" width="6" height="16"
+                                    aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M0 14l6-6-6-6v12z"></path>
+                                </svg>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="blue-circle">
+                                <span class="block-white">31M<sup>*</sup></span>
+                                <span>repositories worldwide</span>
+                            </div>
+                            <div class="stats-text">
+                                <p class="col-10 mb-0"><span class="text-blue">Developers</span> use GitHub for personal projects, from experimenting
+                                    with new programming languages to hosting their life’s work.</p>
+                                <svg class="octicon-triangle-right-blue" viewBox="0 0 6 16" version="1.1" width="6" height="16" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M0 14l6-6-6-6v12z"></path>
+                                </svg>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="purple-circle">
+                                <span class="block-white">2.1M<sup>*</sup></span>
+                                <span>businesses and organizations worldwide</span>
+                            </div>
+                            <div class="stats-text">
+                                <p class="col-10 mb-0"><span class="text-purple">Businesses</span> of all sizes use GitHub to support their development
+                                    process and to securely build software.</p>
+                                <svg class="octicon-triangle-right-purple" viewBox="0 0 6 16" version="1.1" width="6" height="16" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M0 14l6-6-6-6v12z"></path>
+                                </svg>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div>
                     <p></p>
