--- a/index.html
+++ b/index.html
@@ -388,10 +388,22 @@
                                 </svg>
                             </div>
                         </a>
+                        <div class="text-gray">* As of October 2018</div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="form jumbotron">
+            <p class="form-intro">Get started for free — join the millions of developers already using GitHub to share their code, work together, and
+            build amazing things.</p>
+            <div class="formContainer form-bottom">
                 <div>
-                    <p></p>
+                    <input type="text" placeholder="Pick a username" id="username" required>
+                    <input type="email" placeholder="Your email address" id="email" required>
+                    <input type="password" placeholder="Create a password" id="password" required>
+                    <button type="submit" class="button">Sign up for GitHub</button>
+                    <p>By clicking “Sign up for GitHub”, you agree to our <a>terms of service</a> and <a>privacy statement</a>. We’ll
+                        occasionally send you account related emails.</p>
                 </div>
             </div>
         </section>
